Added localStorage and dynamically loading dropdown of project names

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<h3>Toggl Work Log</h3>
 		<form action="">
             <div>
-                <input type="text" id="pid" name="pid" placeholder="Toggl Project ID"/>
+                <select id="selectProject">
+    				<option>Select Project</option>
+				</select>
             </div>
             <div>
                 <input type="text" id="duration" name="duration" value="25"/>
